# Tools-and-Techniques-in-Computational-Science

./: Dockerfile  README.md
hw02/: pi2  (+11 more)
proj1/: .gitignore  Makefile.am  build_autotools.sh  configure.ac
proj1/latex_files/: Project1.tex
proj1/src/: Makefile.am  assemble.cpp  assemble_RHS.h  convergence_testing.sh  job.sh  main_code.cpp  solver.cpp  solver.h  verification_debug.h  write_output_file.h
proj1/src/results/: plotting.py
proj1/test/: Makefile.am  rng.sh
proj2/: .gitignore  Makefile.am  build_autotools.sh  configure.ac  cover.tar
proj2/coverage/lcov/: index-sort-f.html  index-sort-l.html  index.html  lcov.info
proj2/coverage/lcov/src/: assemble.cpp.func-sort-c.html  assemble.cpp.func.html  assemble.cpp.gcov.html  assemble_RHS.cpp.func-sort-c.html  assemble_RHS.cpp.func.html  assemble_RHS.cpp.gcov.html  assemble_Texact.cpp.func-sort-c.html  assemble_Texact.cpp.func.html  assemble_Texact.cpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html  main_code.cpp.func-sort-c.html  main_code.cpp.func.html  main_code.cpp.gcov.html  solver.cpp.func-sort-c.html  solver.cpp.func.html  solver.cpp.gcov.html  verification_debug.cpp.func-sort-c.html  verification_debug.cpp.func.html  verification_debug.cpp.gcov.html  (+3 more)
proj2/src/: Makefile.am  assemble.h  assemble_RHS.cpp  assemble_Texact.cpp  assemble_Texact.h  convergence_testing.sh  cover.tar  data.h5  global_timer.h  hdf5_plotting.py  hdf5_write_output_file.cpp  hdf5_write_output_file.h  main_code.cpp  solver.cpp  solver.h  verification_debug.cpp  write_output_file.cpp
proj2/src/results/: plotting.py  ref_sol_Gauss-Seidel_dim1_order2_n25.h5  ref_sol_Gauss-Seidel_dim1_order4_n25.h5  ref_sol_Gauss-Seidel_dim2_order2_n10.h5  ref_sol_Gauss-Seidel_dim2_order4_n10.h5  ref_sol_Jacobi_dim1_order2_n25.h5  ref_sol_Jacobi_dim2_order2_n10.h5
proj2/test/: Makefile.am  hdf5_rng.sh  rng.sh
(+10 files in other folders)
